--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v2
     - name: find location of yarn cache
       id: yarn-cache
       run: echo "::set-output name=dir::$(yarn cache dir)"
