--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -18,6 +18,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - uses: actions/checkout@v2
     - name: find location of yarn cache
       id: yarn-cache
       run: echo "::set-output name=dir::$(yarn cache dir)"
