--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -33,7 +33,7 @@ jobs:
       with:
         path: node_modules
         key: ${{ runner.os }}-modules-${{ hashFiles('yarn.lock') }}
-    - name: yarn install, build, and test
+    - name: yarn install, build
       run: |
         yarn install
         yarn build
