packages/d: restricted, not private

--- a/packages/d/package.json
+++ b/packages/d/package.json
@@ -7,7 +7,7 @@
     "build": "tsc --outDir dist"
   },
   "publishConfig": {
-    "access": "private"
+    "access": "restricted"
   },
   "devDependencies": {
     "typescript": "^3.7.5"
