--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "typescript": "^3.7.5"
   },
+  "dependencies": {
+    "@herpderper/a": "^0.1.0"
+  },
   "files": [
     "dist"
   ]
