--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@herpderper/a",
-  "version": "0.1.1-alpha.2",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "private": false,
   "scripts": {
