--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@herpderper/b",
-  "version": "0.1.1-alpha.2",
+  "version": "0.1.1",
   "main": "dist/index.js",
   "private": true,
   "scripts": {
@@ -10,7 +10,7 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@herpderper/a": "^0.1.1-alpha.2"
+    "@herpderper/a": "^0.1.1"
   },
   "files": [
     "dist"
