--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,6 +27,7 @@ jobs:
     - name: use node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
+        registry-url: https://registry.npmjs.org/
         node-version: ${{ matrix.node-version }}
     - name: yarn install, build
       run: |
