--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,6 +29,8 @@ jobs:
       with:
         registry-url: https://registry.npmjs.org/ # Required for auth
         node-version: ${{ matrix.node-version }}
+    - name: test it
+      run: env
     - name: yarn install, build
       run: |
         yarn install
