--- a/.github/ISSUE_TEMPLATE/org_member.yaml
+++ b/.github/ISSUE_TEMPLATE/org_member.yaml
@@ -12,9 +12,9 @@ body:
   - type: markdown
     attributes:
       value: >
-        This form is used to request to be come an Organization Member as described
-        by the [Backstage Governance](https://github.com/backstage/backstage/blob/master/GOVERNANCE.md#organization-member).
-        In addition to becoming of the Backstage GitHub organization, this role also
+        This form is used to request Organization Member status in the Backstage project,
+        as described by the [Backstage Governance](https://github.com/backstage/backstage/blob/master/GOVERNANCE.md#organization-member).
+        In addition to becoming member of the Backstage GitHub organization, this role also
         comes with the responsibilities and requirements described in the governance.
 
   - type: checkboxes
@@ -43,14 +43,14 @@ body:
       required: true
     attributes:
       label: 'Highlighted Contributions'
-      description: 'The Backstage governance requires that organization members have made some contributions to the project. Please choose a couple (3-5) of these contributions that you would like to highlight. '
+      description: 'The Backstage governance requires that organization members have made some contributions to the project. Please choose a couple (3-5) of these contributions that you would like to highlight. If you are the member of a Project Area Maintainer team, please let us know your organization, team, and project area instead.'
       placeholder: 'Link to GitHub issues, accepted PRs, or other contributions that you would like to highlight'
 
   - type: input
     id: discord-username
     attributes:
       label: 'What is your Discord username?'
-      description: 'Help let us know who you are in the Backstage community Discord'
+      description: 'Let others know who you are in the Backstage community Discord'
       placeholder: 'DiscordUser#1234'
 
   - type: input
@@ -58,9 +58,9 @@ body:
     attributes:
       label: 'What is the name of your current organization?'
       description: 'Let others know what organization you are a member of'
+      placeholder: 'ACME Corp'
 
   - type: textarea
     id: other
     attributes:
-      label: 'Is there any other context you would like to share?'
-      placeholder: 'No'
+      label: 'Any other context that you wish to share'
