--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,6 @@ jobs:
     strategy:
       matrix:
         derp: [a, b]
-    name: "Test the thing ${{derp}}"
+    name: "Test the thing ${{ matrix.derp }}"
     steps:
       - run: echo "Tested!"
