--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,29 +27,29 @@ jobs:
     steps:
     - uses: hmarr/debug-action@v2
     - run: bool1 A
-      if: bool1 == 'true'
+      if: inputs.bool1 == 'true'
     - run: bool1 B
-      if: bool1 != 'false'
+      if: inputs.bool1 != 'false'
     - run: bool1 C
-      if: bool1 == true
+      if: inputs.bool1 == true
     - run: bool1 D
-      if: bool1 != false
+      if: inputs.bool1 != false
     - run: bool2 A
-      if: bool2 == 'true'
+      if: inputs.bool2 == 'true'
     - run: bool2 B
-      if: bool2 != 'false'
+      if: inputs.bool2 != 'false'
     - run: bool2 C
-      if: bool2 == true
+      if: inputs.bool2 == true
     - run: bool2 D
-      if: bool2 != false
+      if: inputs.bool2 != false
     - run: bool3 A
-      if: bool3 == 'true'
+      if: inputs.bool3 == 'true'
     - run: bool3 B
-      if: bool3 != 'false'
+      if: inputs.bool3 != 'false'
     - run: bool3 C
-      if: bool3 == true
+      if: inputs.bool3 == true
     - run: bool3 D
-      if: bool3 != false
+      if: inputs.bool3 != false
     - uses: actions/checkout@v2
     - name: find location of yarn cache
       id: yarn-cache
