--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -27,76 +27,4 @@ jobs:
     steps:
     - uses: hmarr/debug-action@v2
     - name: bool1 A
-      run: echo hello
-      if: inputs.bool1 == 'true'
-    - name: bool1 B
-      run: echo hello
-      if: inputs.bool1 != 'false'
-    - name: bool1 C
-      run: echo hello
-      if: inputs.bool1 == true
-    - name: bool1 D
-      run: echo hello
-      if: inputs.bool1 != false
-    - name: bool2 A
-      run: echo hello
-      if: inputs.bool2 == 'true'
-    - name: bool2 B
-      run: echo hello
-      if: inputs.bool2 != 'false'
-    - name: bool2 C
-      run: echo hello
-      if: inputs.bool2 == true
-    - name: bool2 D
-      run: echo hello
-      if: inputs.bool2 != false
-    - name: bool3 A
-      run: echo hello
-      if: inputs.bool3 == 'true'
-    - name: bool3 B
-      run: echo hello
-      if: inputs.bool3 != 'false'
-    - name: bool3 C
-      run: echo hello
-      if: inputs.bool3 == true
-    - name: bool3 D
-      run: echo hello
-      if: inputs.bool3 != false
-    - uses: actions/checkout@v2
-    - name: find location of yarn cache
-      id: yarn-cache
-      run: echo "::set-output name=dir::$(yarn cache dir)"
-    - uses: actions/cache@v1
-      with:
-        path: ${{ steps.yarn-cache.outputs.dir }}
-        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-yarn-
-    - name: cache node_modules
-      uses: actions/cache@v1
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-modules-${{ hashFiles('yarn.lock') }}
-    - name: use node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        registry-url: https://registry.npmjs.org/ # Required for auth
-        node-version: ${{ matrix.node-version }}
-    - name: yarn install, build
-      run: |
-        yarn install
-        yarn build
-      env:
-        CI: true
-      # Publishes current version of packages that are not already present in the registry
-    - name: publish
-      run: npx --no-install lerna publish from-package --yes
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        CI: true
-      # Tags the commit with the version in the a package if the tag doesn't exist
-    - uses: Klemensas/action-autotag@1.2.3
-      with:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        package_root: "packages/a"
-        tag_prefix: "v"
+      run: echo "Running from branch"
