--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,6 +23,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
 
     steps:
     - uses: hmarr/debug-action@v2
