--- a/.github/workflows/automate_merge_message.yml
+++ b/.github/workflows/automate_merge_message.yml
@@ -1,7 +1,7 @@
 name: Automate merge message
 on:
   pull_request_target:
-    branches: ['master', 'test']
+    branches: ['master']
     types: ['closed']
 
 permissions:
