--- a/.github/ISSUE_TEMPLATE/org_member.yaml
+++ b/.github/ISSUE_TEMPLATE/org_member.yaml
@@ -23,7 +23,7 @@ body:
       required: true
     attributes:
       label: 'Through which path are you seeking to become an organization member?'
-      description: There are three different paths to becoming an organization member, each of them outlined in the [Backstage Governance](https://github.com/backstage/community/blob/master/GOVERNANCE.md#organization-member).
+      description: There are three different paths to becoming an organization member
       options:
         - 1. I been contributing for at least 3 months and wish to become a standalone org-member
         - 2. The team that I am a member of in my organization are maintainers of a Project Area in Backstage
