--- a/.github/ISSUE_TEMPLATE/org_member.yaml
+++ b/.github/ISSUE_TEMPLATE/org_member.yaml
@@ -23,30 +23,29 @@ body:
       required: true
     attributes:
       label: 'Through which path are you seeking to become an organization member?'
-      description: There are three different paths to becoming an organization member
       options:
-        - 1. I been contributing for at least 3 months and wish to become a standalone org-member
+        - 1. I have been contributing for at least 3 months and wish to become a standalone org-member
         - 2. The team that I am a member of in my organization are maintainers of a Project Area in Backstage
         - 3. I am a maintainer of a plugin the Backstage Community Plugins Repository
 
   - type: textarea
     id: contributions
     attributes:
-      label: '(1) Highlighted Contributions'
-      description: 'This applies if you selected option 1 above. The Backstage governance requires that standalone organization members have made some contributions to the project. Please choose a couple (3-5) of these contributions that you would like to highlight. If you are the member of a Project Area Maintainer team, please let us know your organization, team, and project area instead.'
+      label: 'Highlighted Contributions - If you selected option 1'
+      description: 'The Backstage governance requires that standalone organization members have made some contributions to the project. Please choose a couple (3-5) of these contributions that you would like to highlight. If you are the member of a Project Area Maintainer team, please let us know your organization, team, and project area instead.'
       placeholder: 'Link to GitHub issues, accepted PRs, or other contributions that you would like to highlight'
 
   - type: input
     id: project-area
     attributes:
-      label: '(2) Project Area'
-      description: 'This applies if you selected option 2 above. Please specify the project area that your team maintains'
+      label: 'Project Area - If you selected option 2'
+      description: 'Please specify the project area that your team maintains'
 
   - type: input
     id: plugin-owner
     attributes:
-      label: '(3) Plugin code owner PR'
-      description: 'This applies if you selected option 3 above. Please link to the pull request where you were added as a code owner of a plugin in the community-plugins repository'
+      label: 'Plugin code owner PR - If you selected option 3'
+      description: 'Please link to the pull request where you were added as a code owner of a plugin in the community-plugins repository'
 
   - type: input
     id: discord-username
