--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -11,11 +11,11 @@ body:
 
         Please fill in each section completely. Thank you!
   - type: checkboxes
-    id: read-issue-process
+    id: issue-labels
     attributes:
-      label: '📜 Important Information'
+      label: '📜 Issue Labels'
       options:
-        - label: 'Descriptions of the issue labels in this repository can be found in [LABELS.md](https://github.com/backstage/backstage/blob/master/LABELS.md)'
+        - label: 'Descriptions of the issue labels used in this project can be found in [LABELS.md](https://github.com/backstage/backstage/blob/master/LABELS.md)'
           required: true
   - type: textarea
     id: search-terms
@@ -30,9 +30,10 @@ body:
     validations:
       required: true
   - type: dropdown
+    id: project-area
     attributes:
-      label: What area of the project do you think this bug is related to?
-      description: This will help find an owner for the issue faster.
+      label: Project Area
+      description: What area of the project do you think this bug is related to? This will help find an owner for the issue faster.
       options:
         - Unknown
         - Auditor
@@ -49,6 +50,26 @@ body:
         - Scaffolder
         - Search
         - TechDocs
+    validations:
+      required: true
+  - type: dropdown
+    id: integration
+    attributes:
+      label: External Integration
+      description: Is this issue related to an integration with any particular external system?
+      options:
+        - N/A
+        - AWS
+        - Azure
+        - Azure DevOps
+        - Bitbucket Cloud
+        - Bitbucket Server
+        - GCP
+        - Gerrit
+        - GitHub
+        - GitLab
+        - Gitea
+        - LDAP
     validations:
       required: true
   - type: textarea
@@ -77,7 +98,7 @@ body:
 
         ### Reproducing the bug
 
-        Being able to easily reproduce the bug will significantly increase the likelyhook that it can be identified and fixed. Except for very high impact bugs we strongly encourage you to provide a repository where the bug is reproduced.
+        Being able to easily reproduce the bug will significantly increase the likelyhook that it can be identified and fixed. Please provide a repository where the bug can be reproduced, unless this is a critical bug that needs immediate attention.
 
         If you are unable to provide a reproduction repo, please explain the reproduction steps in as much detail as possible, and include the output of `yarn backstage-cli info` if relevant.
 
@@ -114,7 +135,8 @@ body:
       description: This is absolutely not required, but we are happy to guide you in the contribution process.
       options:
         - Undecided
-        - Yes I am willing to submit a PR!
+        - Yes, and I have enough information to get started
+        - Yes, but I would like some more guidance
         - No, but I'm happy to collaborate on a PR with someone else
         - No, I don't have time to work on this right now
     validations:
